src/website/static/css/result.css
.publisher-div-top{
    witdh: 100%;
    height: 200px;

}

.publisher-div{
    margin-top: 60px;
    margin-left: auto;
    margin-right: auto;

    color: white;
    background-color: #838383;
    width: 100% !important;
}

.publisher-name{
    text-align: center;
    font-size: 30px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    padding-top: 20px;
}

.titles{
    margin: 20px 0 10px;

    text-align: center;
    font-size: 20px;
    font-weight: bold;
    padding-bottom: 10px;
    border-bottom: #ffffff solid 1px;
}

.articles{
    margin-right: 0;
    margin-left: 0;

    text-align: center;
}

.article-last{
    width: 100%;
    height: 30px;
}

.last{
    width: 100%;
    height: 20px;
    margin-bottom: 50px;
}

.polarity-table{
    width: 40%;
    text-align: center;
    margin-right: auto;
    margin-left: auto;

    font-size: 20px;
}

.search-keyword{
    text-align: center;
    margin-bottom: 20px;
    font-size: 20px;
}

#article-title-id{
    text-align: left;
}

